I went through the whole application and formatted the code so it looks pretty and is easy to read. I made comments to help another reader know what is goin on. I also deleted a file I was not using 'create comment' becuase that code lives somehwere more UXy in the application.

--- a/app/views/comments/edit_comment.erb
+++ b/app/views/comments/edit_comment.erb
@@ -1,4 +1,4 @@
-<!---slated for deletion, probably don't need in the first iteration of the platform-->
+<!---slated for deletion, probably don't need in the first iteration of the platform, I'm keeping this, so I can use it to create editing comments functionality-->
 
 <h2>New Artwork Edit</h2>
 <form method="post" action="/comments/<%= @comment.id %>">
