--- a/app/views/newchunks/edit_newchunk.erb
+++ b/app/views/newchunks/edit_newchunk.erb
@@ -22,9 +22,9 @@ body{
     }
 
 
-    #try-box {
-  display:none;
-}
+  #try-box {
+    display:none;
+  }
  .newchunk-title-edit {
     letter-spacing: 13px;
     top: 197px;
@@ -45,7 +45,6 @@ body{
     font-style: italic;
     font-weight: bold;
     color: #ff5d55;
-
   }
 
    .newchunk-title-edit input::-webkit-input-placeholder{
@@ -147,36 +146,33 @@ body{
     }
     
     #back-to-project-index{
-    text-align: center;
-    position: fixed;
-    left: 8px;
-    top: -114px;
-    width: 1272px;
-    height: 233px;
-    font-size: 338px;
-    letter-spacing: 15px;
-    font-style: italic;
-    z-index: 0;
+      text-align: center;
+      position: fixed;
+      left: 8px;
+      top: -114px;
+      width: 1272px;
+      height: 233px;
+      font-size: 338px;
+      letter-spacing: 15px;
+      font-style: italic;
+      z-index: 0;
     }
 
 
     #back-to-project-index a{
-    text-decoration: none;
-    color: rgba(251, 137, 203, 0.69);
-}
+      text-decoration: none;
+      color: rgba(251, 137, 203, 0.69);
+    }
     
 
     .text-edit {
-    position: fixed;
-    /*font-size: 12px;
-    letter-spacing: 1px;
-    font-family: "Courier New";*/
-    top: 248px;
-    overflow: scroll;
-    left: 350;
-    left: 572px;
-    font-style: italic;
-}
+      position: fixed;
+      top: 248px;
+      overflow: scroll;
+      left: 350;
+      left: 572px;
+      font-style: italic;
+    }
 
 .text-edit textarea {
     font-size: 12px;
@@ -190,55 +186,56 @@ body{
     font-style: italic;
 }
 
- .text-edit textarea::-webkit-input-placeholder{
-       font-size: 12px;
-    letter-spacing: 1px;
-    font-family: "Courier New";
-       color: #ff5d55;
+     .text-edit textarea::-webkit-input-placeholder{
+        font-size: 12px;
+        letter-spacing: 1px;
+        font-family: "Courier New";
+        color: #ff5d55;
      }
    
      .text-edit textarea::-moz-placeholder {
        font-size: 12px;
-    letter-spacing: 1px;
-    font-family: "Courier New";
+       letter-spacing: 1px;
+       font-family: "Courier New";
        color: #ff5d55;
      }
    
      .text-edit textarea:-moz-placeholder {
        font-size: 12px;
-    letter-spacing: 1px;
-    font-family: "Courier New";
-       color: #ff5d55;
-     }
-     .text-edit textarea:-ms-input-placeholder {
-       font-size: 12px;
-    letter-spacing: 1px;
-    font-family: "Courier New";
+       letter-spacing: 1px;
+       font-family: "Courier New";
        color: #ff5d55;
      }
 
-.vid {
-    position: fixed;
-    top: 413px;
-    height: 58px;
-    width: 195px;
-    left: 144px;
+     .text-edit textarea:-ms-input-placeholder {
+       font-size: 12px;
+       letter-spacing: 1px;
+       font-family: "Courier New";
+       color: #ff5d55;
+     }
+
+    .vid {
+      position: fixed;
+      top: 413px;
+      height: 58px;
+      width: 195px;
+      left: 144px;
     }
     
     .vid input {
-    border-top: hidden;
-    border-left: hidden;
-    background-color: transparent;
-    border-bottom-color: red;
-    border-right: hidden;
-    border-width: 1px;
-    width:331px;
-    font-family: Audiowide;
-    font-size: 18px;
-    color: #ff5d55;
-  }
+      border-top: hidden;
+      border-left: hidden;
+      background-color: transparent;
+      border-bottom-color: red;
+      border-right: hidden;
+      border-width: 1px;
+      width:331px;
+      font-family: Audiowide;
+      font-size: 18px;
+      color: #ff5d55;
+    }
 
-   .vid input::-webkit-input-placeholder{
+     .vid input::-webkit-input-placeholder{
        font-family:Audiowide;
        font-style: italic;
        color:#ff5d55;
@@ -276,11 +273,10 @@ body{
     border-right: hidden;
     border-width: 1px;
     width:331px;
-
     font-family: Audiowide;
     font-size: 18px;
     color: #ff5d55;
-">
+
     }
      .pics input::-webkit-input-placeholder{
        font-family:Audiowide;
@@ -306,14 +302,14 @@ body{
      }
 
    .sound {
-    position: fixed;
-    top: 477px;
-    height: 58px;
-    width: 195px;
-    left: 144px;
-    font-family: Audiowide;
-    font-size: 12pt;
-  }
+      position: fixed;
+      top: 477px;
+      height: 58px;
+      width: 195px;
+      left: 144px;
+      font-family: Audiowide;
+      font-size: 12pt;
+    }
  
 
  .sound input {
@@ -327,9 +323,9 @@ body{
     font-family: Audiowide;
     font-size: 18px;
     color: #ff5d55;
- }
+   }
 
- .sound input::-webkit-input-placeholder{
+     .sound input::-webkit-input-placeholder{
        font-family:Audiowide;
        font-style: italic;
        color:#ff5d55;
@@ -353,12 +349,12 @@ body{
      }
 
      #delete-button-edit {
-    position: fixed;
-    left: 1024px;
-    font-size: 22px;
-    top: 411px;
+       position: fixed;
+       left: 1024px;
+       font-size: 22px;
+       top: 411px;
     
-   }
+     }
 
 #trash-can-edit {
     position: fixed;
@@ -391,15 +387,12 @@ body{
     transform: rotate(-90deg);
     font-size: 40px;
     font-style: italic;
-    /* overflow: scroll; */
     letter-spacing: 2px;
-    /* max-width: 200px; */
 }
 
 .p-title-edit a {
   text-decoration: none;
   color:#ff5d55;
-
 }
      
 
@@ -407,19 +400,18 @@ body{
 
 
 
-<div id="back-to-project-index"><a href="/projects">HW
-</a></div>
+<div id="back-to-project-index"><a href="/projects">HW</a></div>
  
  <div class="pink-box-edit"></div>
 
 
 <form method="post" action="/newchunks/<%= @newchunk.id %>">
-   <input id="hidden" type="hidden" name="_method" value="PATCH">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   
- <div class="newchunk-title-edit"><input type="text" name="title" value="<%= @newchunk.title %>"></div>
+  <div class="newchunk-title-edit"><input type="text" name="title" value="<%= @newchunk.title %>"></div>
 
 
-<div class="text-edit"><textarea type="text" name="text" placeholder="text of your thingy"><%= @newchunk.text %></textarea></div>
+  <div class="text-edit"><textarea type="text" name="text" placeholder="text of your thingy"><%= @newchunk.text %></textarea></div>
 
   
   <div class="vid"><input type="url" name="video_link" value="<%= @newchunk.video_link %>" placeholder="video link"></div>
@@ -428,24 +420,20 @@ body{
 
   <div class="sound"><input type="url" placeholder="sound link" name="sound_link" value="<%= @newchunk.sound_link %>"></div>
 
-<input type="image" id="plus-edit" src="/images/plus-red.svg">
-
+  <input type="image" id="plus-edit" src="/images/plus-red.svg">
 </form>
 
 <div id="delete-button-edit">
   
   <form method="post" action="/newchunks/<%= @newchunk.id %>/delete">
 
-            
-  <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
-  
-  <input type="image" id="trash-can-edit" src="/images/trash-red.svg"></input>
+    <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
+    <input type="image" id="trash-can-edit" src="/images/trash-red.svg"></input>
   
   </form>
         
   </div> 
 
 <div class="p-title-edit"><a href="/<%=@project.pslug%>/index"><%=@project.title%></a></div>
- <!--I need to display the current vote total on each, and where users can upvote their fav version of the scene- I'm gonna let everybody like anything once make it boolean so if the click again it will undo the like-->
-
+ 
  <div id="score-edit"><a href="/<%=@project.pslug%>/final_map">SCORE</a></div>
