--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -1,22 +1,20 @@
 
 <style> 
 body{
-background-color: #fefce0;
-color: #ff5d55;
-font-family: 'Audiowide', cursive;
+  background-color: #fefce0;
+  color: #ff5d55;
+  font-family: 'Audiowide', cursive;
 }
 
 
 #try-box {
-    display: none;
-    
+    display: none;    
 }
 
   #p-title-n {
   
     top: -18px;
     position: fixed;
-    /* float: left; */
     left: 89px;
     width: 1271px;
     height: 121px;
@@ -30,7 +28,7 @@ font-family: 'Audiowide', cursive;
   }
 
 
-    #side-title-n {
+  #side-title-n {
     font-size: 30px;
     letter-spacing: 5px;
     top: 588px;
@@ -43,10 +41,9 @@ font-family: 'Audiowide', cursive;
     overflow: scroll;
     width: auto;
     white-space: nowrap;
-    /* overflow-x: scroll; */
     transform: rotate(-90deg);
     transform-origin: top left;
-    }
+  }
   
   #video-n {
     position: absolute;
@@ -66,34 +63,33 @@ font-family: 'Audiowide', cursive;
   }
 
    #sound-n {
-  position: absolute;
-   top: 187px;
+    position: absolute;
+    top: 187px;
     height: 48px;
     width: 61px;
     left: 136px;
   }
 
-.pink-box {
-   
-    border: 1px solid #ff3823;
-    background-color: rgb(253, 244, 248);
-    border-radius: 35px;
-    color: black;
-    width: 887px;
-    height: 155px;
-    left: 57px;
-    top: 0px;
-    position: relative;
-    padding: 10px;
-    padding-left: 10px;
-    font-size: 15px;
-    padding-top: 10px;
-    letter-spacing: 1px;
-    font-style: italic;
-    margin-bottom: -13px;
+  .pink-box {
+      border: 1px solid #ff3823;
+      background-color: rgb(253, 244, 248);
+      border-radius: 35px;
+      color: black;
+      width: 887px;
+      height: 155px;
+      left: 57px;
+      top: 0px;
+      position: relative;
+      padding: 10px;
+      padding-left: 10px;
+      font-size: 15px;
+      padding-top: 10px;
+      letter-spacing: 1px;
+      font-style: italic;
+      margin-bottom: -13px;
     }
 
-      .pink-box::-webkit-input-placeholder{
+    .pink-box::-webkit-input-placeholder{
        font-family:Audiowide;
        font-style: italic;
        color:#ff3823;
@@ -116,10 +112,10 @@ font-family: 'Audiowide', cursive;
        color:#ff3823;
      }
 
-     .pink-box a{
-
-    text-decoration: none;
+    .pink-box a {
+      text-decoration: none;
     } 
+
     a:link {
       color: #ff5555;
     }
@@ -130,7 +126,7 @@ font-family: 'Audiowide', cursive;
       color: white;
     }
 
-     .edit-n{
+   .edit-n{
     font-size: 25px;
     letter-spacing: 16px;
     font-style: italic;
@@ -147,36 +143,35 @@ font-family: 'Audiowide', cursive;
     }
     .edit-n a{
         color: #ff55b0;
-}
+    }
     #side-create-n{
-        font-size: 37px;
-    letter-spacing: 8px;
-    top: 245px;
-    left: 1055px;
-    height: 110px;
-    transform: rotate(-90deg);
-    /* z-index: 4; */
-    font-style: italic;
-    color: white;
-    position: fixed;
-    height: 30px;
+      font-size: 37px;
+      letter-spacing: 8px;
+      top: 245px;
+      left: 1055px;
+      height: 110px;
+      transform: rotate(-90deg);
+      font-style: italic;
+      color: white;
+      position: fixed;
+      height: 30px;
     }
 
     #side-create-n a{
-      text-decoration: none;
-      color:#ff5d55;
+     text-decoration: none;
+     color:#ff5d55;
     }
 
     #score-n {
-    font-style: italic;
-    font-weight: bold;
-    position: fixed;
-    font-size: 103px;
-    letter-spacing: 11px;
-    left: 209px;
-    top: 548px;
-    width: 183px;
-    height: 56px;
+      font-style: italic;
+      font-weight: bold;
+      position: fixed;
+      font-size: 103px;
+      letter-spacing: 11px;
+      left: 209px;
+      top: 548px;
+      width: 183px;
+      height: 56px;
     }
 
     #score-n a{
@@ -185,40 +180,32 @@ font-family: 'Audiowide', cursive;
     }
     
     .user-n {
-        
-    font-size: 15px;
-    top: -22px;
-    letter-spacing: 1px;
-    font-style: italic;
-    width: 30px;
-    padding-top: 0px;
-    padding-left: 11px;
-    position: absolute;
-    left: 70px;
+      font-size: 15px;
+      top: -22px;
+      letter-spacing: 1px;
+      font-style: italic;
+      width: 30px;
+      padding-top: 0px;
+      padding-left: 11px;
+      position: absolute;
+      left: 70px;
     }
 
     .user-n a {
       text-decoration: none;
       color:red;
-
     }
 
     .votes-total-n {
-    position: absolute;
-    left: 748px;
-    font-size: 22px;
-    top: -30px;
-    letter-spacing: 1px;
-    font-style: italic;
-  }
+      position: absolute;
+      left: 748px;
+      font-size: 22px;
+      top: -30px;
+      letter-spacing: 1px;
+      font-style: italic;
+    }
     
-
-    
-
-    
-
-    .text-n {
-
+ .text-n {
     position: absolute;
     padding-left: 86px;
     font-size: 12px;
@@ -231,22 +218,12 @@ font-family: 'Audiowide', cursive;
     overflow: scroll;
     max-height: 74%;
     max-width: 850px;
-
   }
-
-   /*.edit-big {
-    top: 119px;
-    left: 1120px;
-    height: 110px;
-    position:relative;
-    }*/
-
-
     
     #p-title-n a {
-
-    text-decoration: none;
+      text-decoration: none;
     } 
+    
     a:link {
       color: #ff5555;
     }
@@ -256,11 +233,7 @@ font-family: 'Audiowide', cursive;
     a:hover {
       color: white;
     }
-
-
-
     
-
 .big-wrapper {
     top: 139px;
     position: fixed;
@@ -284,7 +257,6 @@ font-family: 'Audiowide', cursive;
     top: -22px;
     height: 100px;
     font-style: italic;
-
 }
 
 .view-comments-n a {
@@ -299,23 +271,22 @@ font-family: 'Audiowide', cursive;
 }
 .title-n {
   position: absolute;
-    padding-left: 13px;
-    font-size: 22px;
-    top: -28px;
-    letter-spacing: 1px;
-    font-style: italic;
-    width: 800px;
-    left: 239px;
-    width: 249px;
-
+  padding-left: 13px;
+  font-size: 22px;
+  top: -28px;
+  letter-spacing: 1px;
+  font-style: italic;
+  width: 800px;
+  left: 239px;
+  width: 249px;
 }
 
 .delete-button-n {
   position: absolute;
-    left: 900px;
-    font-size: 22px;
-    top: 184px;
-    width: 100px;
+  left: 900px;
+  font-size: 22px;
+  top: 184px;
+  width: 100px;
 }
 
 .trash-can-n {
@@ -335,74 +306,70 @@ font-family: 'Audiowide', cursive;
 
 <!--this is the code that lists all new art versions of the old scene, without listing the old scene itself-->
 
-<!-- <div class="wrapper" -->
-<!-- indi --><div id="p-title-n"><a href="/<%=@project.pslug%>/index"><%=@project.title%></a></div>
 
-<!-- indi --><div id="side-title-n">ALL <%= @oldchunk.title%>s</div>
+<div id="p-title-n"><a href="/<%=@project.pslug%>/index"><%=@project.title%></a></div>
+
+<div id="side-title-n">ALL <%= @oldchunk.title%>s</div>
 
 <div class="big-wrapper">
     
-    <% @newchunks.each do |newchunk| %>
+  <% @newchunks.each do |newchunk| %>
     <%user = User.find_by_id(newchunk.user_id) %>
- 
-  <div class="little-wrapper">
-  <!-- author --><div class="user-n"><%= user.username %></div>
-  <!-- title --><div class="title-n"><%= newchunk.title %></div>
-  <div class="view-comments-n"><a href="/newchunks/<%=newchunk.id%>/show">view comments</a></div>
-  <!-- newchunks-n link --><div class="pink-box"></div>
-  <!-- vote toal --><div class="votes-total-n"><%= @vote_counts[newchunk.id]%>
-  <% if @vote_counts[newchunk.id] == 1%>
-  vote
-  <%elsif @vote_counts[newchunk.id] == nil%>
-  no votes yet
-  <%else%>
-  votes
-<%end%></div>
+   
+    <div class="little-wrapper">
+    <!-- author --><div class="user-n"><%= user.username %></div>
+    <!-- title --><div class="title-n"><%= newchunk.title %></div>
+    <div class="view-comments-n"><a href="/newchunks/<%=newchunk.id%>/show">view comments</a></div>
+    <!-- newchunks-n link --><div class="pink-box"></div>
+    <!-- vote toal --><div class="votes-total-n"><%= @vote_counts[newchunk.id]%>
+    <% if @vote_counts[newchunk.id] == 1%>
+      vote
+    <%elsif @vote_counts[newchunk.id] == nil%>
+      no votes yet
+    <%else%>
+      votes
+    <%end%>
+    </div>
 
 
  
- <div class="text-n"><%= newchunk.text %></div>
+     <div class="text-n"><%= newchunk.text %></div>
 
-  <div class="icons">
-    <div id="video-n"><a href="<%= newchunk.video_link %>" target="_blank"><img src="/images/video-camera.svg"></a></div>
-    <div id="image-n"><a href="<%= newchunk.image_link %>" target="_blank"><img src="/images/camera.svg"></a></div>
-    <div id="sound-n"><a href="<%= newchunk.sound_link %>" target="blank"><img src="/images/soundcloud.svg"></a></div>
-  </div>
+    <div class="icons">
+      <div id="video-n"><a href="<%= newchunk.video_link %>" target="_blank"><img src="/images/video-camera.svg"></a></div>
+      <div id="image-n"><a href="<%= newchunk.image_link %>" target="_blank"><img src="/images/camera.svg"></a></div>
+      <div id="sound-n"><a href="<%= newchunk.sound_link %>" target="blank"><img src="/images/soundcloud.svg"></a></div>
+    </div>
  
     <%if newchunk.user_id == current_user.id%>
-    <div class="edit-n"><a href="/newchunks/<%=newchunk.id%>/edit">edit</a></div>
+      <div class="edit-n"><a href="/newchunks/<%=newchunk.id%>/edit">edit</a></div>
     <%end%>
     
+    <%if newchunk.user_id == current_user.id%>
+      <div class="delete-button-n">
+    
+        <form method="post" action="/newchunks/<%= newchunk.id %>/delete">
 
+                  
+          <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
+        
+          <input type="image" class="trash-can-n" src="/images/trash-red.svg"></input>
+        
+        </form>
+      </div>
+    <%end%>
 
-  <%if newchunk.user_id == current_user.id%>
-  <div class="delete-button-n">
-  
-  <form method="post" action="/newchunks/<%= newchunk.id %>/delete">
+  </div>
 
-            
-  <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
-  
-  <input type="image" class="trash-can-n" src="/images/trash-red.svg"></input>
-  
-  </form>
-</div>
-<%end%>
-
-</div>
-
- <% end %>
+<% end %>
 
 </div>
-
 
  
-  <!--I need a create button for each newchunk-use this route:/newchunks/new-->
+  <!--need a create button for each newchunk-use this route:/newchunks/new-->
 
 <div id="side-create-n"><a href="/<%=@project.pslug%>/<%=@oldchunk.oslug%>/create">CREATE</a></div>
    
- 
-
 
  <div id="score-n"><a href="/<%=@project.pslug%>/final_map">SCORE</a></div>
 
