--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -12,9 +12,9 @@ body{
     margin: 0px;
     font-size: 90%;
   }
+
    a {
     text-decoration: none;
-
     } 
     a:link {
       color: #ff5555;
@@ -31,40 +31,35 @@ body{
 
    
 #p-title {
-  
-    top: -46px;
-    position: fixed;
-    /* float: left; */
-    left: 89px;
-    width: 1271px;
-    
-    background-color: rgba(255, 255, 255, 0);
-    font-size: 122px;
-    letter-spacing: 0px;
-    font-style: italic;
-    color: red;
-    max-height: 151px;
-    overflow: scroll;}
+  top: -46px;
+  position: fixed;
+  left: 89px;
+  width: 1271px;
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 122px;
+  letter-spacing: 0px;
+  font-style: italic;
+  color: red;
+  max-height: 151px;
+  overflow: scroll;}
 
 #name {
-        position: fixed;
-    left: -17px;
-    font-size: 20px;
-    transform: rotate(-90deg);
-    top: 217px;
-    letter-spacing: 6px;
-    font-style: italic;
+  position: fixed;
+  left: -17px;
+  font-size: 20px;
+  transform: rotate(-90deg);
+  top: 217px;
+  letter-spacing: 6px;
+  font-style: italic;
 }
-   /* .header::after {
-      clear:both;
-    }*/
+   
 
   #name a{
     text-decoration: none;
     color:white;
   }
       
-    #oldchunk-text {  
+  #oldchunk-text {  
     font-family: "Courier New", Courier, monospace;
     font-size: 14px;
     color: #d45454;
@@ -98,7 +93,7 @@ body{
   }
 
   #sound {
-  position: fixed;
+    position: fixed;
     top: 456px;
     height: 48px;
     width: 61px;
@@ -107,20 +102,19 @@ body{
   }
 
   #newchunk-text {
-  font-size: 45px;
+    font-size: 45px;
     letter-spacing: 17px;
     top: 119px;
     left: 1120px;
     height: 110px;
-    
     z-index: 4;
     font-style: italic;
     color: black;
     position: fixed;
-}
+  }
 
   #comment-show  {
-        border: 1px solid #ff3823;
+    border: 1px solid #ff3823;
     background-color: rgb(253, 244, 248);
     border-radius: 10px;
     font-size: 100%;
@@ -135,7 +129,8 @@ body{
     font-family: "Courier New";
     font-size: 12px;
     font-style: italic;
-    z-index: 14;}
+    z-index: 14;
+  }
 
   #comment-show::-webkit-input-placeholder{
        font-family:Audiowide;
@@ -172,7 +167,8 @@ body{
     position: fixed;
     max-height: 25px;
     max-width: 340px;
-    overflow: scroll; }
+    overflow: scroll; 
+  }
 
    #side-edit{
     font-size: 45px;
@@ -183,21 +179,16 @@ body{
     transform: rotate(-90deg);
     z-index: 4;
     font-style: italic;
-   
     position: fixed;
-    }
+  }
 
-            
     #try-box {
       display:none;
     }
-            
-
-           
-
+          
    #score {
-  font-style: italic;
-   font-weight: bold;
+    font-style: italic;
+    font-weight: bold;
     position: fixed;
     font-size: 86px;
     letter-spacing: 11px;
@@ -205,24 +196,12 @@ body{
     top: 578px;
     width: 200px;
     height: 56px;
-    
-
-}        
+  }        
    
-  /*.comment-text {
-    font-family: "Courier New";
-    font-style: italic;
-    position: absolute;
-    font-size: 12px;
-    letter-spacing: 1px;
-    left: 631px;
-    top: 547px;
-    width: 436px;
-    height: 56px;
-  }  */
+
     
-   .indi-comments {
-   border: 1px solid #ff3823;
+  .indi-comments {
+    border: 1px solid #ff3823;
     background-color: rgb(253, 244, 248);
     border-radius: 10px;
     font-size: 12px;
@@ -239,14 +218,8 @@ body{
     font-style: italic;
    } 
 
-   /*#newchunk-title {
-    position: fixed;
-    left: -83px;
-    font-size: 22px;
-    top: 595px;
-    letter-spacing: 5px;
-    font-style: italic;}*/
-    #o-title {
+   
+  #o-title {
     position: fixed;
     left: 9px;
     font-size: 61px;
@@ -257,18 +230,11 @@ body{
     transform-origin: top left;
     width: auto;
     white-space: nowrap;
-}
+  }
 
-
-
-
-   
-
-   #newchunk-text {
-    
+  #newchunk-text {
     position: fixed;
     left: 555px;
-    /*max-: 85px;*/
     font-size: 13px;
     top: 133px;
     letter-spacing: 1px;
@@ -277,7 +243,8 @@ body{
     font-family: "Courier New";
     overflow: scroll;
     max-width: 605px;
-    min-height: 165px;}
+    min-height: 165px;
+  }
    
 
    #vote-count {
@@ -286,7 +253,8 @@ body{
     font-size: 22px;
     top: 102px;
     letter-spacing: 1px;
-    font-style: italic;}
+    font-style: italic;
+  }
     
   #vote-checkbox {
     position: absolute;
@@ -305,37 +273,32 @@ body{
     left: 1124px;
     font-size: 22px;
     top: 411px;
-    
-
    }
 
 
 
    #plus-show {
-        position: absolute;
+    position: absolute;
     left: 201px;
     top: 119px;
     width: 192px;
     height: 147px;
     color: red;
     z-index: 14;
-}
+  }
 
-
-#scroll-box {
+  #scroll-box {
     top: 305px;
     position: fixed;
     width: 604px;
     left: 585px;
     overflow: scroll;
     padding-top: 0px;
-    height: 287px;}
+    height: 287px;
+  }
 
-
-
-#comment-wrapper {
-
-  font-family: "Courier New";
+  #comment-wrapper {
+    font-family: "Courier New";
     font-style: italic;
     position: absolute;
     font-size: 12px;
@@ -345,26 +308,16 @@ body{
     width: 436px;
     height: 56px;
     padding-top: 243px;
-}
+  }
 
 </style>
 
-
-
-  <div id="p-title"><a href="/<%=@project.pslug%>/index"><%=@project.title%></a></div>
-
-
-
-
-
+<div id="p-title"><a href="/<%=@project.pslug%>/index"><%=@project.title%></a></div>
 <!-- AUTHOR OF THE NEWCHUNK -->
-
 <div id="name"><%= @newchunk_author.username %></div>
-
- <!-- OLDCHUNK TITLE -->
-  <div id="o-title"><a href="/<%=@project.pslug%>/<%= @oldchunk.oslug %>/index"><%= @oldchunk.title %></a></div> 
+<!-- OLDCHUNK TITLE -->
+ <div id="o-title"><a href="/<%=@project.pslug%>/<%= @oldchunk.oslug %>/index"><%= @oldchunk.title %></a></div> 
  
-
 <!--OLDCHUNK TEXT
  -->  
 <div id="oldchunk-text"><%= h(@oldchunk.text).gsub(/\n/, '<br/>') %></div><br>
@@ -376,8 +329,6 @@ body{
 <div id="image"><a href="<%= @newchunk.image_link %>" target="_blank"><img src="/images/camera.svg"></a></div>
           
 <div id="sound"><a href="<%= @newchunk.sound_link %>" target="blank"><img src="/images/soundcloud.svg"></a></div>
-        
-         
 <!--here is the stuff within the newchunk box-
 -(votes, title, and text of new idea scene)- -->
 
@@ -387,58 +338,38 @@ body{
 
 <div id="newchunk-text"><%= @newchunk.text %></div><br>
 
-<!-- <div id="delete-button">
-  
-  <form method="post" action="/newchunks/<%= @newchunk.id %>/delete">
-
-            
-  <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
-  
-  <input type="image" id="trash-can" src="/images/trash-red.svg"></input>
-  
-  </form>
-        
-  </div>  -->
-       
-
 <!-- HERE IS WHERE USERS WILL COMMENT INTO THE FORM ABOUT A NEW IDEA OF ANOTHER USER- AND THEY WILL GET TO VOTE ON THEIR FAV. NEW VERSION  -->       
     
 <div id="scroll-box">
-  <form method="post" action="/newchunks/comment"><br>
-
-
-<textarea id="comment-show" type="text" name="comment" placeholder="enter comment here"></textarea>
- 
-               
-<div id="vote-checkbox"><% if @remaining_votes > 0 %>use one of your <%= @remaining_votes %> remaining votes on this piece?<input type="checkbox" name="vote" value="<%=@newchunk.id%>"></input>
-<% else %> you have no remaining votes!
-<% end %></div>
+<form method="post" action="/newchunks/comment"><br>
+  <textarea id="comment-show" type="text" name="comment" placeholder="enter comment here"></textarea>
+  <div id="vote-checkbox">
+    <% if @remaining_votes > 0 %>use one of your <%= @remaining_votes %> remaining votes on this piece?<input type="checkbox" name="vote" value="<%=@newchunk.id%>"></input>
+    <% else %> you have no remaining votes!
+    <% end %>
+  </div>
               
 <!-- <div><input type="submit" id="submit" value="submit" class="btn btn-primary"> -->
-<input type="image" id="plus-show" src="/images/plus-red.svg">
-
-
-<input type="hidden" name="id" value="<%=@newchunk.id%>">
-              
+ <input type="image" id="plus-show" src="/images/plus-red.svg">
+ <input type="hidden" name="id" value="<%=@newchunk.id%>">
 </form>
 
 
-    <div id="comment-wrapper">
-        <% @comments.each do |comment| %>
-        <%user = User.find_by_id(comment.user_id) %>
-        <div class="indi-comments"><p><%= user.username %></p>
-        <p><%= h(comment.text).gsub(/\n/, '<br/>') %></p><br></div>
-        <%end%>
+  <div id="comment-wrapper">
+      <% @comments.each do |comment| %>
+      <%user = User.find_by_id(comment.user_id) %>
+      <div class="indi-comments"><p><%= user.username %></p>
+      <p><%= h(comment.text).gsub(/\n/, '<br/>') %></p><br></div>
+      <%end%>
 
-   </div>
-  
-  </div> <!-- end of scroll box -->
+  </div>
+</div> <!-- end of scroll box -->
 </div>
-  <%if @newchunk.user_id == current_user.id%>
-  <div id="side-edit"><a href='/newchunks/<%=@newchunk.id%>/edit'>EDIT</a>
-  </div><%end%>
-  <!-- "SCORE" CHECK OTHER WRITTEN CODE IN OLDCHUNKS/OLDCHUNKS -->
-  <div id="score"><a href='/<%=@project.pslug%>/final_map'>SCORE</a></div>
+<%if @newchunk.user_id == current_user.id%>
+  <div id="side-edit"><a href='/newchunks/<%=@newchunk.id%>/edit'>EDIT</a></div>
+<%end%>
+<!-- "SCORE" CHECK OTHER WRITTEN CODE IN OLDCHUNKS/OLDCHUNKS -->
+<div id="score"><a href='/<%=@project.pslug%>/final_map'>SCORE</a></div>
 
 
 
