--- a/app/views/oldchunks/edit_oldchunk.erb
+++ b/app/views/oldchunks/edit_oldchunk.erb
@@ -1,6 +1,6 @@
 <div>Source Scene Edit</div>
-
-<div><form method="post" action="/oldchunks/<%= @oldchunk.id %>">
+<!-- this is a feature I'm keeping in as I'm still deciding how I want to build it into the UX
+ --><div><form method="post" action="/oldchunks/<%= @oldchunk.id %>">
   
   <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="title" value="<%= @oldchunk.title %>"><br>
