--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -1,26 +1,26 @@
 <style> 
+
 body{
-background-color: #ff5d55;
-color: white;
-font-family: 'Audiowide', cursive;
+  background-color: #ff5d55;
+  color: white;
+  font-family: 'Audiowide', cursive;
 }
 
 #try-box {
   display: none;
 }
 
-
 #hw-box {
-        text-align: center;
-    position: fixed;
-    left: 8px;
-    top: -114px;
-    width: 1272px;
-    height: 233px;
-    font-size: 338px;
-    letter-spacing: 15px;
-    font-style: italic;
-    z-index: 0;
+  text-align: center;
+  position: fixed;
+  left: 8px;
+  top: -114px;
+  width: 1272px;
+  height: 233px;
+  font-size: 338px;
+  letter-spacing: 15px;
+  font-style: italic;
+  z-index: 0;
   } 
 
 #hw-box a{
@@ -29,40 +29,35 @@ font-family: 'Audiowide', cursive;
 }
 
 #project-title {
-   font-style: italic;
-    font-weight: bold;
-    position: fixed;
-    font-size: 37px;
-    letter-spacing: 9px;
-    left: 183px;
-    top: 38px;
-    width: 1045px;
-    height: 56px;
-    text-align: center;
-
+  font-style: italic;
+  font-weight: bold;
+  position: fixed;
+  font-size: 37px;
+  letter-spacing: 9px;
+  left: 183px;
+  top: 38px;
+  width: 1045px;
+  height: 56px;
+  text-align: center;
 }
-
 
 #project-title a {
   text-decoration: none;
   color:white;
 }
 
-
-    
-
 #create {
-    font-style: italic;
-    position: fixed;
-    font-size: 70px;
-    letter-spacing: 3px;
-    left: -45px;
-    top: 274px;
-    width: 239px;
-    height: 179px;
-    transform: rotate(-90deg);
+  font-style: italic;
+  position: fixed;
+  font-size: 70px;
+  letter-spacing: 3px;
+  left: -45px;
+  top: 274px;
+  width: 239px;
+  height: 179px;
+  transform: rotate(-90deg);
+ }
 
-}
 #create a {
   text-decoration: none;
   color:white;
@@ -70,16 +65,14 @@ font-family: 'Audiowide', cursive;
 
 #score {
   font-style: italic;
-   font-weight: bold;
-    position: fixed;
-    font-size: 86px;
-    letter-spacing: 11px;
-    left: 183px;
-    top: 578px;
-    width: 200px;
-    height: 56px;
-    
-
+  font-weight: bold;
+  position: fixed;
+  font-size: 86px;
+  letter-spacing: 11px;
+  left: 183px;
+  top: 578px;
+  width: 200px;
+  height: 56px;
 }
 
 #score a {
@@ -90,144 +83,97 @@ color:white;
 .oldchunk-title {
   font-style: italic;
   font-weight: bold;
-    /* position: fixed; */
-    font-size: 15px;
-    letter-spacing: 2px;
-    /* left: 183px; */
-    /* top: 578px; */
-    /* width: 1000px; */
-    /* height: 15px; */
-    overflow: scroll;
-    color: red;
-    
-
+  font-size: 15px;
+  letter-spacing: 2px;
+  overflow: scroll;
+  color: red;
 }
 
 .oldchunk-title a{
   text-decoration: none;
-color:white;
+  color:white;
 }
 
 .oldchunk-text {
-        /* font-style: italic; */
-    /* font-weight: bold; */
-    /* position: fixed; */
-    letter-spacing: 1px;
-    
-    / top: 580px; */
-    width: 600px; */
-    max-height: 62px;
-    overflow: scroll;
-    /* overflow-x: scroll; */
-    /* overflow-y: scroll; */
-    color: white;
-    margin-bottom: 5px;
-    font-family: courier new;
-    font-size: 9px;
-
-
+  letter-spacing: 1px;
+  top: 580px; 
+  width: 600px; 
+  max-height: 62px;
+  overflow: scroll;
+  color: white;
+  margin-bottom: 5px;
+  font-family: "Courier New";
+  font-size: 9px;
 }
 
 #box-o-scenes {
-        top: 135px;
-    left: 128px;
-    position: fixed;
-    overflow: scroll;
-    right: 165px;
-    /* bottom: 54px; */
-    /* overflow-x: scroll; */
-    /* overflow-y: scroll; */
-    /* max-height: 429px; */
-    min-height: 568;
-    min-height: 568;
-    /* min-height: 568px; */
-    bottom: 72px;
+  top: 135px;
+  left: 128px;
+  position: fixed;
+  overflow: scroll;
+  right: 165px;
+  min-height: 568;
+  min-height: 568;
+  bottom: 72px;
 }
 
 #users {
   font-style: italic;
   font-weight: bold;
-    /* position: fixed; */
-    font-size: 15px;
-    letter-spacing: 2px;
-    /* left: 183px; */
-    top: 200px; 
-    /* width: 1000px; */
-    /* height: 15px; */
-    overflow: scroll;
-    color: white;
-  }
+  font-size: 15px;
+  letter-spacing: 2px;
+  top: 200px; 
+  overflow: scroll;
+  color: white;
+}
     
-    .trash-old {
-    /*position: fixed;
-    left: 936px;
-    top: 487px;
-    width: 278px;*/
+  .trash-old {
     height: 17px;
-    /*transform: scale(1);
-    transform-origin: 137px 94px;
-    color: #ff5d55;
-
-*/
-    }
-       /* position: relative;
-    left: 936px;
-    top: 0px;
-    width: 286px;
-    height: 22px;
-    transform: scale(1);
-    transform-origin: 137px 94px;
-
-*/
+  }
+     
 .trash-position{
-    width: 100%;
-    padding-left: 2px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+  width: 100%;
+  padding-left: 2px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 </style>
 
 <!-- link back to list of projects -->
 <div id="hw-box"><a href='/projects'>hypermedia wonderland</a></div>
-
 <!-- title of the project -->
 <div id="project-title"><%=@project.title%></div>
-
 <!--the title of the platform should always nav the user back to the original projects list-->
 <!--this is a link to the add an oldchunk SCENE and TITLE to the list of source scenes-->
-    <div id="create"><a href='/<%=@project.pslug%>/oldchunk/new'>create</a></div>
-
+<div id="create"><a href='/<%=@project.pslug%>/oldchunk/new'>create</a></div>
 <!--this is a list of all the current USERS on a project w link to their show page of all their contributions to this projects-->
-  <div id="users"><% @users.each do |user| %></div>
-  <div><a href='/users/<%=user.slug%>/show'><%= user.username %></a></div>
-   <% end %>
- </div>
+<div id="users">
+  <% @users.each do |user| %></div>
+    <div><a href='/users/<%=user.slug%>/show'><%= user.username %></a></div>
+  <% end %>
+</div>
 
 
 <div id="box-o-scenes">
-    <% @oldchunks.each do |oldchunk| %>
+  <% @oldchunks.each do |oldchunk| %>
    
-   <div class="oldchunk-title"><a href="/<%=@project.pslug%>/<%=oldchunk.oslug%>/index"><%= oldchunk.title %></a></div>
+    <div class="oldchunk-title"><a href="/<%=@project.pslug%>/<%=oldchunk.oslug%>/index"><%= oldchunk.title %></a></div>
 
-   <% if current_user.username == "nicolefederici"%>
-   <div class="trash-position"><form method="post" action="/oldchunks/<%= oldchunk.id %>/delete">
-    
-    <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
-    <input type="image" class="trash-old" src="/images/trash.svg"></input>
+    <% if current_user.username == "nicolefederici"%>
+     <div class="trash-position"><form method="post" action="/oldchunks/<%= oldchunk.id %>/delete">
+      
+      <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
+      <input type="image" class="trash-old" src="/images/trash.svg"></input>
+     
+     </form>
+     </div>
+    <%end%>
    
-   </form>
- </div><%end%>
-   
-   <div class="oldchunk-text"><%= h(oldchunk.text).gsub(/\n/, '<br/>') %></div>
-
-   
-
-   <% end %>
+    <div class="oldchunk-text"><%= h(oldchunk.text).gsub(/\n/, '<br/>') %></div>
+  <% end %>
 </div>
-  
-
   <!--the word SCORE should always nav the user to the performance score of all the highest voted versions of each scene in order-->
-  <div id="score"><a href='/<%=@project.pslug%>/final_map'>SCORE</a></div>
+<div id="score"><a href='/<%=@project.pslug%>/final_map'>SCORE</a></div>
 
 
