--- a/app/views/projects/edit_project.erb
+++ b/app/views/projects/edit_project.erb
@@ -1,25 +1,27 @@
+<!-- for future of edit project- not currently used by program
 
+ -->
 <style> 
-body{
-background-color: #ffa834;
-color: white;
-font-family: 'Audiowide', cursive;
 
+body{
+  background-color: #ffa834;
+  color: white;
+  font-family: 'Audiowide', cursive;
 }
 
 #subtitle {
-    margin-top: 40px;
-    text-align:center;
-    position:fixed;
-    font-size:18px;
-    letter-spacing:15px;
-    left:48px;
-    top:270px;
-    width:1164px;
-    height:116px;
-    color:white;
-    z-index: 6;
-  }
+  margin-top: 40px;
+  text-align:center;
+  position:fixed;
+  font-size:18px;
+  letter-spacing:15px;
+  left:48px;
+  top:270px;
+  width:1164px;
+  height:116px;
+  color:white;
+  z-index: 6;
+}
 
   #box {
     text-align:center;
@@ -33,14 +35,6 @@ font-family: 'Audiowide', cursive;
     font-style: italic;
     font-weight:bold;
   } 
-
-  #h {
-
-  }
-
-  #w {
-    
-  }
   
   #plus-sign {
     position:fixed;
@@ -55,17 +49,6 @@ font-family: 'Audiowide', cursive;
   #plus-sign:focus {
     border-color: transparent;
   }
-
-
-
-
-
-
-
-
-
-
-
 
 </style>
 <div id="box"><div id="h">h</div><br><div id="w">w</div>
